# clean-architecture-python

./: .coverage  .coveragerc  .env  .gitignore  Dockerfile  MODELAGEM.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
devops/: k8s-deployment.yaml
src/application/: saude.py
src/domain/: __init__.py  autorizacao.py  fatura.py  fatura_guia.py  guia.py  guia_dto.py  material.py  paciente.py  prestador.py  procedimento.py  profissional.py
src/infrastructure/: exception_handlers.py  exceptions.py  health.py  logging_config.py
src/infrastructure/config/: settings.py
src/infrastructure/controllers/: fatura.py  guia.py  health.py
src/infrastructure/database/: __init__.py  cache_manager.py  connect.py  repository_base.py
src/infrastructure/paginations/: __init__.py  pagination.py
src/use_cases/: fatura.py  guia.py
tests/: conftest.py
tests/domain/: test_autorizacao.py  test_beneficiario_validators.py  test_fatura.py  test_fatura_validators.py  test_guia.py  test_guia_validators.py  test_material.py  test_models_creation.py  test_paciente.py  test_prestador.py  test_prestador_validators.py  test_procedimento.py  test_profissional.py  test_profissional_validators.py
tests/infrastructure/: test_exceptions.py  test_pagination.py
